fdo#76248: Fix for file corruption which contains Polyline shape.

Reviewed on:
	https://gerrit.libreoffice.org/8623

Change-Id: I042eeb0829c55d6a0fd5d85c1712c7b1cddc8c96